# workflow

./: .gitignore  Makefile  README.md  build.bat  build.linux.sh  build.sh  build.types.sh  cabal.linux.project  cabal.osx.project  cabal.project  cabal.sh  cabal.windows.project  default.nix  notes.txt  project.nix  shell.nix  stack-linux.yaml  stack-osx.yaml  stack-windows.yaml  stack.yaml  styx.yaml  watch.sh  windows-playground.cabal  workflow-extra.cabal  workflow-pure.cabal  workflow-types.cabal  workflow-windows.cabal  workflow-x11-shell.cabal
benchmarks/: Bench.hs
cabal/: common.project  spiros.project
executables/: Main.hs
native/: Clipboard.cpp  Clipboard.h  Main.c  Makefile  Workflow.c  Workflow.h  calling_convention.h
nix/: haskell-compiler.nix  haskell-packages.nix  haskell-utilities.nix  haskell.nix  other-shell.nix  utilities.nix  workflow.nix
scripts/spiros/: build.sh
scripts/spiros/cabal/: build.sh
scripts/spiros/stack/: build.sh
sources/: Workflow.hs
sources/Workflow/: Bindings.hs  Core.hs  Derived.hs  Example.hs  Execute.hs  Extra.hs  Keys.hs  Main.hs  Parser.hs  Pure.hs  Types.hs  Windows.hs
sources/Workflow/Backends/X11/: Bindings.hs  Execute.hs  Foreign.hs  Types.hs
sources/Workflow/Derived/: Extra.hs  Main.hs
sources/Workflow/Pure/: Char.hs  Execute.hs  Extra.hs  Main.hs  Types.hs
sources/Workflow/Windows/: Bindings.hs  Bindings2.hs  Constants.hs  Error.hs  Example.hs  Execute.hs  Extra.hs  Foreign.hs  Main.hs  Types.hs  Variables.hs
stack/: linux.yaml  osx.yaml  spiros.yaml  windows.yaml
tests/: DocTest.hs
tests/Playground/: Test.hs
tests/Workflow/: Test.hs
tests/Workflow/Pure/: Test.hs
workflow-extra/: workflow-extra.cabal
workflow-extra/benchmarks/: Bench.hs
workflow-extra/sources/Workflow/: Derived.hs
workflow-extra/sources/Workflow/Derived/: Types.hs
workflow-extra/tests/: DocTest.hs
workflow-extra/tests/Workflow/: Test.hs
workflow-pure/: shell.nix  stack.yaml  workflow-pure.cabal
workflow-pure/benchmarks/: Bench.hs
workflow-pure/executables/: Main.hs
workflow-pure/sources/Workflow/Pure/: Extra.hs  Main.hs
workflow-types/: default.nix  package.nix  shell.nix  workflow-types.cabal
workflow-types/sources/Workflow/: Class.hs  Core.hs  Example.hs  Extra.hs  Keys.hs  Lens.hs  Reexports.hs  Types.hs
workflow-windows/: execute.bat
workflow-windows/native/: Workflow.c  run-main.bat  run-native.bat
workflow-windows/sources/Workflow/Windows/: Bindings.c  Bindings.hs  Constants.hs  Error.hs  Execute.hs
workflow-x11-shell/: README.md  default.nix  stack.yaml  workflow-x11-shell.cabal
workflow-x11-shell/sources/Workflow/Backends/: X11.hs
workflow-x11-shell/sources/Workflow/Backends/X11/: Bindings.hs  Example.hs  Extra.hs  Foreign.hs
workflow-x11-shell/tests/Workflow/Backends/X11/: Test.hs
