name:                workflow-windows
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/workflow-windows#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2015 Spiros Boosalis
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sboosali/workflow-windows


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:         -Wall
 default-extensions:  LambdaCase

 c-sources:        native/Workflow.c
 includes:         native/Workflow.h
 install-includes: native/Workflow.h
 include-dirs:     native

 exposed-modules:
  Workflow.Windows
  Workflow.Windows.Types
  Workflow.Windows.Bindings
  Workflow.Windows.Main

 build-depends:
    base >=4.7 && <5
  , lens


-- $ stack exec workflow-windows
executable workflow-windows
 hs-source-dirs:      executables
 main-is:             Main.hs
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , workflow-windows


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
  base
  , workflow-windows
  , doctest ==0.10.*

-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Workflow.Test

 build-depends:
  base
  , workflow-windows
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
