name:                workflow-x11-shell
version:             0.0.0
synopsis:            `workflow` backend (user input automation) via `xdotool` and `xclip`
description:         TODO
homepage:            http://github.com/sboosali/workflow-x11-shell#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2017 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/workflow-x11-shell


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
                 Workflow.Backends.X11
                 Workflow.Backends.X11.Types
                 Workflow.Backends.X11.Bindings
                 Workflow.Backends.X11.Foreign
-- other-modules:
                 Workflow.Backends.X11.Extra
                 Workflow.Backends.X11.Example

 build-depends:
               base >=4.7 && <5

             , spiros         >=0.2

             , workflow-types ==0.0.*

             , transformers
             , mtl
             , containers
--              , bytestring
--              , stm
--              , template-haskell

             , process >=1.4.3.0
             , deepseq
             , hashable
             , semigroups
             , data-default-class


--                          , pipes

--              , lens
             , exceptions
--              , free
--              , bifunctors
--              , profunctors
--              , either
--              , formatting
--              , servant
             , Earley
             , split
--              , interpolatedstring-perl6
--              , wl-pprint-text
--              , text
--              , aeson
--              , hashable
--              , unordered-containers
--              , async
--              , parallel


executable example-workflow-x11-shell
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , workflow-x11-shell


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , workflow-x11-shell
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Workflow.Backends.X11.Test

 build-depends:
    base
  , workflow-x11-shell
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- -- $ stack bench
-- benchmark command
--  hs-source-dirs:      benchmarks
--  main-is:             Bench.hs
--  type:                exitcode-stdio-1.0

--  default-language: Haskell2010
--  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

--  build-depends:
--     base
--   , workflow-x11-shell
--   , criterion
--   , deepseq

